@@ -307,7 +307,7 @@ SOUND_HW += fmopl.o adlib.o
 endif
 
 # SCSI layer
-VL_OBJS+= scsi-disk.o cdrom.o
+VL_OBJS+= scsi-disk.o cdrom.o lsi53c895a.o
 
 # USB layer
 VL_OBJS+= usb.o usb-hub.o usb-linux.o usb-hid.o usb-ohci.o usb-msd.o
