@@ -1,3 +1,8 @@
+2006-05-30 03:48  pbrook
+
+	* Makefile.target, vl.h, hw/lsi53c895a.c, hw/pc.c, hw/scsi-disk.c,
+	  hw/versatilepb.c: PCI SCSI HBA emulation.
+
 2006-05-26 23:53  pbrook
 
 	* vl.h, hw/esp.c, hw/scsi-disk.c, hw/usb-msd.c: SCSI lun probing
